--- a/Splitter/View/MainWindow.xaml
+++ b/Splitter/View/MainWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:p="clr-namespace:Fizzi.Applications.Splitter.Properties"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         x:Name="MainWindowName" Height="400" Width="250"
+        MinHeight="50" MinWidth="50"
         WindowStyle="None" AllowsTransparency="{Binding Source={x:Static p:Settings.Default}, Path=AllowsTransparency, Mode=OneTime}"
         MouseDown="Window_MouseDown" Title="Fizzi's Split Timer">
     <Window.DataContext>
